--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,11 +9,11 @@
 </head>
 <body>
     <header>
-        <h1>Vai ser uma imagem aqui</h1>
-        <ul>
-            <li>Escola</li>
-            <li>Estudante</li>
-        </ul>
+        <img scr="Logo Costa e Silva.png"</h1>
+    </ul>
+        <li>Escola</li>
+        <li>Estudante</li>
+    </ul>
     </header>
 
 </body>
