--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img scr="Logo Costa e Silva.png"</h1>
+    <img class="cabecalho-imagem
     </ul>
         <li>Escola</li>
         <li>Estudante</li>
