--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <header>
-    <img class="cabecalho-imagem
-    </ul>
-        <li>Escola</li>
-        <li>Estudante</li>
+    <img class="cabecalho-imagem" src="Logo Costa e Silva.png" alt="Logo do Costa e Silva" srcset="">
+    <ul class="cabecalho-lista">
+        <li class="cabecalho-lista-item">Escola</li>
+        <li class="cabecalho-lista-item">Estudante</li>
     </ul>
     </header>
 
