--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <section class="escola">
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Sobre a Escola</h2>
-            <p class="escola-texto-um">A Escola Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento Computacional, através do ensino de  Programação.</p>
-            <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série B. Nós somos super unidos e a turma favorita por todos os professores e professoras que nos ajudam!</p>
+            <p class="escola-texto-um">o colégio foi fundado em 1962, na epoca era uma grupo escolar Joaquim Oliveira Franco, e funcionava no Cesum do Clube União, e tinha apenas 90 alunos.</p>
+            <p class="escola-texto-dois">No decorrer do tempo o colégio foi ampliando e em 1978 passou a ser Colégio Estadual Marechal Arthur da Costa e Silva.</p>
         </div>
         <img class="escola-imagem" src="Formula-bro.png" alt="imagem que representa uma professora em sala de aula">
     </section>
