--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="logo Costa e Silva.png" alt="logo costa e silva">
+        <img class="cabecalho-imagem" src="Logo Costa e Silva.png" alt="Logo costa e silva">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Escola</li>
             <li class="cabecalho-lista-item">Estudante</li>
@@ -24,7 +24,7 @@
             <p class="escola-texto-um">o colégio foi fundado em 1962, na epoca era uma grupo escolar Joaquim Oliveira Franco, e funcionava no Cesum do Clube União, e tinha apenas 90 alunos.</p>
             <p class="escola-texto-dois">No decorrer do tempo o colégio foi ampliando e em 1978 passou a ser Colégio Estadual Marechal Arthur da Costa e Silva.</p>
         </div>
-        <img class="escola-imagem" src="Formula-bro.png" alt="imagem que representa uma professora em sala de aula">
+        <img class="escola-imagem" src="Formula-bro.png" alt="alura">
     </section>
     <section class="estudante">
         <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
@@ -32,69 +32,33 @@
         <span></span>
         <div class="estudante-div">
             <img class="estudante-imagem" src="Marcelo.jpeg" alt="foto do marcelo">
-            <h3 class="estudante-nome">Alana</h3>
-            <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://linkedin.com/marcelopaludetto"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <h3 class="estudante-nome">Vinicius</h3>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="Gabi.jpg" alt="foto da gabi">
             <h3 class="estudante-nome">Fernanda</h3>
-            <a href="https://github.com/GabrielaM-L"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://www.linkedin.com/in/gabriela-marcomini-de-lima/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com/gabriela_marcomini/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="Liz.jpg" alt="foto da lizandra">
             <h3 class="estudante-nome">Samara</h3>
-            <a href="https://github.com/LizandraDuarte40"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://www.linkedin.com/in/lizandrarlm-duarte/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com/lizandrarlm"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <span></span>
         <span></span>
         <div class="estudante-div">
             <img class="estudante-imagem" src="Joice.jpg" alt="foto da joice">
             <h3 class="estudante-nome">Leticia</h3>
-            <a href="https://github.com/JoiceAlura"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://www.linkedin.com/in/joicebarbaresco/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com/joicebarbaresco/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="Maria.jpg" alt="foto da maria">
-            <h3 class="estudante-nome">Marcela</h3>
-            <a href="https://github.com/MagePSR"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://www.linkedin.com/in/mariageovanna"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com/magpsr/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <h3 class="estudante-nome">Eduardo Simionatto</h3>
         </div>
-        <div class="estudante-div">
-            <img class="estudante-imagem" src="Olivia.jpg" alt="foto da olhe">
-            <h3 class="estudante-nome">Isabel</h3>
-            <img class="estudante-icone" src="github.png" alt="icone github">
-            <a href="https://www.linkedin.com/in/olhe/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://github.com/olhe12"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <span></span>
         <span></span>
-        <div class="estudante-div">
-            <img class="estudante-imagem" src="Rafa.jpg" alt="foto da rafa">
-            <h3 class="estudante-nome">Julya</h3>
-            <a href="https://github.com/rafaelamunhoz12"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="http://linkedin.com/in/rafaela-felix-munhoz-oliveira-02160a10a"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com/rafafmo/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
-        </div>
-        <div class="estudante-div">
-            <img class="estudante-imagem" src="Thais.jpg" alt="foto da thais">
-            <h3 class="estudante-nome">Clara</h3>
-            <a href="https://github.com/Thaispianucci"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://www.linkedin.com/in/thais-pianucci-benedicto-54a9a416/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com/thaispianucci/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
-        </div>
-
     </div>
     </section>
     <footer class="rodape">
-        <img class="rodape-imagem"src="logo costa e silva" alt="logo costa e silva">
+        <img class="rodape-imagem"src="Logo costa e silva" alt="Logo costa e silva">
     </footer>
 </body>
 </html>
